# weatherinfo

./: Cargo.toml  README.md
src/: api.rs  cli_opts.rs  config.rs  error.rs  lib.rs  main.rs  temperature.rs  weather_data.rs
